--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.mail.username=username
 spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.application.name=adopet-api
+eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+server.port=0
